@startuml MainComponent_ClassDiagram

title Main Component Class Diagram

skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FFF3E6
skinparam packageStyle rectangle
skinparam shadowing false

package "main" {
    class QuizMos
}

package "Logic" {
    class Parser
    abstract class "{abstract}\nCommand" as Command
}

package "Storage" {
    class Storage
}

package "Ui" {
    class Ui
}

package "Model" {
    class FlashcardList
}

/' Relationships '/
QuizMos --> FlashcardList : manages >
QuizMos ..> Parser : parses command
QuizMos ..> Command : executes command
QuizMos --> Storage.Storage : persists data
QuizMos ..> Ui.Ui : interacts with user

@enduml
